--- a/unified_biquaternion_theory/docs/osf_release/main.tex
+++ b/unified_biquaternion_theory/docs/osf_release/main.tex
@@ -53,16 +53,15 @@ The classical 4D spacetime that we observe is interpreted not as a simple "real 
 \end{equation}
 All other components (\(y_0^\mu\), and all \(x_{1,2,3}^\mu\), \(y_{1,2,3}^\mu\)) represent internal degrees of freedom of spacetime itself, encoding phase, spin, and gauge information directly into the geometry of the manifold.
 
-
 \subsection{The Fundamental Field \( \Theta(q) \)}
-The central object is a biquaternion-valued spinor field \( \Theta(q) \in \mathbb{B} \otimes \mathbb{C}^4 \). This single field acts as a universal precursor to all other fields. It can be locally decomposed into its amplitude and phase: \( \Theta(q) = \rho(q) e^{i\phi(q)} \).
+The central object is a biquaternion-valued spinor field \( \Theta(q) \in \mathbb{B} \otimes \mathbb{C}^4 \). This single field acts as a universal precursor to all other fields. Its various components and excitational modes correspond to the particles of the Standard Model. It can be locally decomposed into its amplitude and phase: \( \Theta(q) = \rho(q) e^{i\phi(q)} \).
 
 \subsection{The Equation of Motion}
 The dynamics of \( \Theta \) are governed by a generalized covariant wave equation. A simplified form can be expressed as:
 \begin{equation}
     \left( \mathcal{D}_\mu \mathcal{D}^\mu + m^2 \right) \Theta(q) = 0
 \end{equation}
-where \( \mathcal{D}_\mu = \partial_\mu + \Omega_\mu \) is the biquaternionic covariant derivative. This equation unifies wave-like propagation in the real coordinates with diffusion-like dynamics in the imaginary coordinates. One of the constraints emerging from this equation is a condition of orthogonality between the gradients of the amplitude and phase: \( \eta^{\mu\nu} \partial_\mu \rho \, \partial_\nu \phi = 0 \).
+where \( \mathcal{D}_\mu = \partial_\mu + \Omega_\mu \) is the biquaternionic covariant derivative. This equation unifies wave-like propagation in the real part of the coordinates with diffusion-like dynamics in the imaginary part. One of the constraints emerging from this equation is a condition of orthogonality between the gradients of the amplitude and phase: \( \eta^{\mu\nu} \partial_\mu \rho \, \partial_\nu \phi = 0 \).
 
 \section{Emergent Physics I: Spacetime and Gravity}
 
